Starting on Cart

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,5 +1,5 @@
 .link{
-    color: rgb(184, 173, 173);
+    color: #b8adad;
     text-decoration: none;
 }
 .link:hover{
@@ -11,4 +11,6 @@
     border-radius: 55px;
    
 } 
+
+
 
