--- a/src/App.css
+++ b/src/App.css
@@ -18,3 +18,15 @@
   font-weight: bold;
   color: black;
 }
+
+.card-img-top {
+  width: 100%;
+  height: 18vw;
+  object-fit: cover;
+}
+
+h1 {
+  text-align: center;
+  color: black;
+  text-decoration: none;
+}
